# TenantTrackPro

TenantTrackPro/: .env.example  .gitignore  Dockerfile  app_factory.py  app_main.py  auth.py  cache_manager.py  db_optimizer.py  docker-compose.yml  gunicorn_config.py  jinja_globals.py  main.py  models.py  performance_monitor.py  pyproject.toml  rbac_utils.py  replit.txt  routes.py  run.py  timezone_utils.py
TenantTrackPro/Documentation/: ANSWERS_TO_YOUR_QUESTIONS.md  API_DOCUMENTATION.md  DEPLOYMENT_CHECKLIST.md  FEATURE_DESCRIPTIONS.md  README.md  SYSTEM_DOCUMENTATION.md  USER_MANUAL.md  key_management_adding_documentation.txt  replit.md  step_1_cleanup_documentation.txt  step_2_cleanup_documentation.txt  step_2_cleanup_documentation_COMPLETE.txt  step_3_cleanup_documentation.txt  step_3_cleanup_documentation_COMPLETE.txt  step_4_cleanup_documentation.txt  step_4_cleanup_documentation_COMPLETE.txt  step_4_expansion_complete_report.txt  step_5_static_file_organization_documentation.txt  step_6_rbac_implementation_documentation.txt  step_7_dynamic_role_rbac_implementation_complete.txt  template_organization_complete_report.txt  template_structure_cleanup_report.txt
TenantTrackPro/app/models/: __init__.py  models_asset.py  models_bedding.py  models_compliance.py  models_food_locker.py  models_house_acknowledge.py  models_key_management.py  models_meter_reading.py  models_msrf.py  models_resident_checkout.py  models_room_inspection.py
TenantTrackPro/app/routes/: __init__.py  admin_routes.py  asset_routes.py  compliance_routes.py  dashboard_routes.py  form_routes.py  key_routes.py  offense_routes.py  org_routes.py  other_routes.py  (+4 more)
TenantTrackPro/attached_assets/: img-20250227-wa0050-mePbR3JJQocjDVpk_1750211451080.avif  step_7_dynamic_role_rbac_1750758436590.txt
TenantTrackPro/docs/: API.md  DEPLOYMENT.md  SETUP.md
TenantTrackPro/src/: __init__.py
TenantTrackPro/templates/: 403.html  add_room_number.html  admin_add_org.html  admin_create_news.html  admin_edit_news.html  asset_form.html  asset_name_details.html  assets.html  base.html  base_old.html  bedding_categories.html  bedding_items.html  create_meter_company.html  create_room_inspection.html  damage_assets.html  edit_asset.html  edit_bedding_item.html  edit_checklist.html  edit_key_record.html  edit_msrf_request.html  edit_purchase_form.html  edit_stock_usage.html  edit_water_meter_reading.html  error.html  food_locker_management.html  form_error.html  form_management.html  form_management_old.html  house_acknowledge_edit.html  house_acknowledge_form.html  house_acknowledge_language_select.html  house_acknowledge_storage.html  house_acknowledge_success.html  index.html  key_management_dashboard.html  key_management_qr_codes.html  key_management_records.html  key_scan_form.html  key_scan_success.html  login_professional.html  (+31 more)
(+54 files in other folders)
